force-app/main/default/objects/SlaAdministration__c/SlaAdministration__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione, dove sono definiti gli SLA ed il relativo contesto di applicazione</description>
    <label>Amministrazione SLA</label>
    <nameField>
        <label>Nome SLA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amministrazione SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>