force-app/main/default/objects/SlaAdministration__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>Tipo attività</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accettazione Voltura</fullName>
            </value>
            <value>
                <fullName>Amm. Precheck KO SII</fullName>
            </value>
            <value>
                <fullName>Ammissibilità KO</fullName>
            </value>
            <value>
                <fullName>Annullamento</fullName>
            </value>
            <value>
                <fullName>Anticipo Appuntamento</fullName>
            </value>
            <value>
                <fullName>Approvazione Bonus Commerciale</fullName>
            </value>
            <value>
                <fullName>Approvazione Offerte</fullName>
            </value>
            <value>
                <fullName>Assistenza Contact Center</fullName>
            </value>
            <value>
                <fullName>Attesa Preventivo DL</fullName>
            </value>
            <value>
                <fullName>Attivazioni</fullName>
            </value>
            <value>
                <fullName>Back Office - Catalogo Prodotti</fullName>
            </value>
            <value>
                <fullName>Back Office - Contratti</fullName>
            </value>
            <value>
                <fullName>Back Office - Fatturazione</fullName>
            </value>
            <value>
                <fullName>Back Office - Morosità</fullName>
            </value>
            <value>
                <fullName>Back Office - Pagamenti</fullName>
            </value>
            <value>
                <fullName>Back Office - Preventivi</fullName>
            </value>
            <value>
                <fullName>Back Office - Supporto/Comunicazioni Urgenti</fullName>
            </value>
            <value>
                <fullName>Back Office - Tari/TCP</fullName>
            </value>
            <value>
                <fullName>Back Office - Vas e HVAC</fullName>
            </value>
            <value>
                <fullName>Busta Docusign non consegnata</fullName>
            </value>
            <value>
                <fullName>Caricamenti contratti</fullName>
            </value>
            <value>
                <fullName>Check preliminari KO</fullName>
            </value>
            <value>
                <fullName>Chiamata Callback</fullName>
            </value>
            <value>
                <fullName>Chiamata inbound</fullName>
            </value>
            <value>
                <fullName>Chiamata outbound</fullName>
            </value>
            <value>
                <fullName>Comunicazione da DL</fullName>
            </value>
            <value>
                <fullName>Comunicazioni con DL</fullName>
            </value>
            <value>
                <fullName>Conferma Preventivo</fullName>
            </value>
            <value>
                <fullName>Confermare Cambio Decorrenza</fullName>
            </value>
            <value>
                <fullName>Contattare il cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>