force-app/main/default/objects/SlaAdministration__c/fields/Ato__c.field-meta.xml
<CustomField>
    <fullName>Ato__c</fullName>
    <label>ATO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATO Bacchiglione</fullName>
            </value>
            <value>
                <fullName>ATO Orientale Triestino</fullName>
            </value>
            <value>
                <fullName>Ato 4</fullName>
            </value>
            <value>
                <fullName>Ato 5</fullName>
            </value>
            <value>
                <fullName>Ato 6</fullName>
            </value>
            <value>
                <fullName>Ato 7</fullName>
            </value>
            <value>
                <fullName>Ato 8</fullName>
            </value>
            <value>
                <fullName>Ato 9</fullName>
            </value>
            <value>
                <fullName>AATO 1 MARCHE NORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>