force-app/main/default/objects/SlaAdministration__c/fields/CaseField__c.field-meta.xml
<CustomField>
    <fullName>CaseField__c</fullName>
    <label>Campo case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Inserimento Richiesta</fullName>
            </value>
            <value>
                <fullName>Data Ricezione Richiesta</fullName>
            </value>
            <value>
                <fullName>Data Pagamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>