force-app/main/default/objects/SlaAdministration__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Cittadino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>