force-app/main/default/objects/SlaAdministration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrizione SLA</label>
    <type>TextArea</type>
</CustomField>