force-app/main/default/objects/SlaAdministration__c/fields/EndCasePhase__c.field-meta.xml
<CustomField>
    <fullName>EndCasePhase__c</fullName>
    <label>Fase Case fine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acconto Paperless Non Pagato</fullName>
            </value>
            <value>
                <fullName>Acconto Paperless Pagato</fullName>
            </value>
            <value>
                <fullName>Allineamento RCU Concluso</fullName>
            </value>
            <value>
                <fullName>Ammissibilità KO</fullName>
            </value>
            <value>
                <fullName>Ammissibilità OK</fullName>
            </value>
            <value>
                <fullName>Annullato</fullName>
            </value>
            <value>
                <fullName>Approvazione KO</fullName>
            </value>
            <value>
                <fullName>Approvazione OK</fullName>
            </value>
            <value>
                <fullName>Attesa check preliminari</fullName>
            </value>
            <value>
                <fullName>Attesa conferma preventivo cliente</fullName>
            </value>
            <value>
                <fullName>Attesa Info da Banca</fullName>
            </value>
            <value>
                <fullName>Avvenuta Riduzione Potenza</fullName>
            </value>
            <value>
                <fullName>BL010</fullName>
            </value>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Check preliminari KO</fullName>
            </value>
            <value>
                <fullName>Check preliminari OK</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>Completata</fullName>
            </value>
            <value>
                <fullName>Comunicazione verso Heroku KO</fullName>
            </value>
            <value>
                <fullName>Comunicazione verso Heroku OK</fullName>
            </value>
            <value>
                <fullName>Da Inviare</fullName>
            </value>
            <value>
                <fullName>Da inviare a SAP</fullName>
            </value>
            <value>
                <fullName>Data Esecuzione Prevista</fullName>
            </value>
            <value>
                <fullName>Elaborazione Manuale</fullName>
            </value>
            <value>
                <fullName>E-Mail Inviata</fullName>
            </value>
            <value>
                <fullName>E-Mail Non Inviata</fullName>
            </value>
            <value>
                <fullName>Errore Lavorazione SAP</fullName>
            </value>
            <value>
                <fullName>Esito KO Riduzione Potenza</fullName>
            </value>
            <value>
                <fullName>Esito OK Riduzione Potenza</fullName>
            </value>
            <value>
                <fullName>Esito KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>