force-app/main/default/objects/SlaAdministration__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data fine validità</label>
    <type>Date</type>
</CustomField>