force-app/main/default/objects/SlaAdministration__c/fields/OrderField__c.field-meta.xml
<CustomField>
    <fullName>OrderField__c</fullName>
    <label>Campo Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data consenso E-mail PEC Invio Bolletta</fullName>
            </value>
            <value>
                <fullName>Data inizio Validità Codice Destinatario</fullName>
            </value>
            <value>
                <fullName>Data invio richiesta</fullName>
            </value>
            <value>
                <fullName>Data decorrenza</fullName>
            </value>
            <value>
                <fullName>Data differita</fullName>
            </value>
            <value>
                <fullName>Data lettura Attuale</fullName>
            </value>
            <value>
                <fullName>Data lettura retroattiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>