force-app/main/default/objects/SlaAdministration__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tutti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>