force-app/main/default/objects/SlaAdministration__c/fields/RangeType__c.field-meta.xml
<CustomField>
    <fullName>RangeType__c</fullName>
    <label>Tipo intervallo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giorni Solari</fullName>
                <default>true</default>
                <label>Giorni Solari</label>
            </value>
            <value>
                <fullName>Giorni Lavorativi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>