force-app/main/default/objects/SlaAdministration__c/fields/SalesCompany__c.field-meta.xml
<CustomField>
    <fullName>SalesCompany__c</fullName>
    <label>Societa di vendita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesCompany</valueSetName>
    </valueSet>
</CustomField>