force-app/main/default/objects/SlaAdministration__c/fields/SecondLevelComplaintClassification__c.field-meta.xml
<CustomField>
    <fullName>SecondLevelComplaintClassification__c</fullName>
    <label>2° Livello</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misura</fullName>
            </value>
            <value>
                <fullName>Mercato</fullName>
            </value>
            <value>
                <fullName>Qualità Commerciale</fullName>
            </value>
            <value>
                <fullName>Fatturazione</fullName>
            </value>
            <value>
                <fullName>Doppia Fatturazione</fullName>
            </value>
            <value>
                <fullName>Bonus sociale</fullName>
            </value>
            <value>
                <fullName>Contratti</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Connessioni, lavori e qualità tecnica</fullName>
            </value>
            <value>
                <fullName>Morosità e sospensione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>