force-app/main/default/objects/SlaAdministration__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data inizio validità</label>
    <type>Date</type>
</CustomField>