force-app/main/default/objects/SlaAdministration__c/fields/StartOrderPhase__c.field-meta.xml
<CustomField>
    <fullName>StartOrderPhase__c</fullName>
    <label>Fase ordine inizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accettato Motore Vas</fullName>
            </value>
            <value>
                <fullName>Accettazione pagamento a DL</fullName>
            </value>
            <value>
                <fullName>Accettazione Voltura</fullName>
            </value>
            <value>
                <fullName>Amm. Precheck KO SII</fullName>
            </value>
            <value>
                <fullName>Amm. Precheck OK SII</fullName>
            </value>
            <value>
                <fullName>Ammissibilità conformità KO</fullName>
            </value>
            <value>
                <fullName>Ammissibilità conformità OK</fullName>
            </value>
            <value>
                <fullName>Ammissibilità KO</fullName>
            </value>
            <value>
                <fullName>Ammissibilità OK</fullName>
            </value>
            <value>
                <fullName>Annullamento - Ammissibilità KO</fullName>
            </value>
            <value>
                <fullName>Annullamento - Ammissibilità OK</fullName>
            </value>
            <value>
                <fullName>Annullamento - Comunicazione verso Heroku KO</fullName>
            </value>
            <value>
                <fullName>Annullamento - Comunicazione verso Heroku OK</fullName>
            </value>
            <value>
                <fullName>Annullamento - Da inviare</fullName>
            </value>
            <value>
                <fullName>Annullamento dal SII</fullName>
            </value>
            <value>
                <fullName>Annullamento - Esito KO da DL/SII</fullName>
            </value>
            <value>
                <fullName>Annullamento - Esito OK da DL/SII</fullName>
            </value>
            <value>
                <fullName>Annullamento - Inviato al DL/SII</fullName>
            </value>
            <value>
                <fullName>Annullamento per Switch-out</fullName>
            </value>
            <value>
                <fullName>Annullamento - Revocato</fullName>
            </value>
            <value>
                <fullName>Annullamento SII - Errore Lavorazione SAP</fullName>
            </value>
            <value>
                <fullName>Annullamento SII - Ricezione</fullName>
            </value>
            <value>
                <fullName>Annullato</fullName>
            </value>
            <value>
                <fullName>Annullato per Dati Discordanti</fullName>
            </value>
            <value>
                <fullName>Annullato SII</fullName>
            </value>
            <value>
                <fullName>Attesa conferma preventivo cliente</fullName>
            </value>
            <value>
                <fullName>Attesa Credit Check</fullName>
            </value>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>Bozza Annullata</fullName>
            </value>
            <value>
                <fullName>Caricamento KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>