force-app/main/default/objects/SlaAdministration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Transizione Fasi Case</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Data presente sul Case –&gt; Apertura Activity</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Data presente sul Case –&gt; Chiusura Activity</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Data presente sul Case –&gt; Fase Case</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Apertura Activity –&gt; Chiusura Activity</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Transizione Fasi Order</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Data presente sull&apos;Order –&gt; Apertura Activity</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Data presente sull&apos;Order –&gt; Chiusura Activity</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Data presente sull&apos;Order –&gt; Fase Order</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Data apertura activity –&gt; Data chiusura activity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>