force-app/main/default/objects/SlaAdministration__c/recordTypes/HDT_RT_PostSales.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_PostSales</fullName>
    <active>true</active>
    <label>Post Sales</label>
</RecordType>