force-app/main/default/objects/SlaAdministration__c/recordTypes/HDT_RT_Sales.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Sales</fullName>
    <active>true</active>
    <label>Sales</label>
</RecordType>