force-app/main/default/objects/SlaAdministration__c/validationRules/Check_Start_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Start_EndDate</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
    <errorMessage>La data di inizio non può essere maggiore della fine</errorMessage>
</ValidationRule>