force-app/main/default/objects/SlaAdministration__c/validationRules/PostSales_Rule_01.validationRule-meta.xml
<ValidationRule>
    <fullName>PostSales_Rule_01</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;01&apos;),
				OR(ISPICKVAL(StartCasePhase__c,&apos;&apos;),
    ISPICKVAL(EndCasePhase__c,&apos;&apos;))
  )</errorConditionFormula>
    <errorMessage>Per questo tipo di regola devono essere compilati i campi Inizio e Fine Fase del Case</errorMessage>
</ValidationRule>