force-app/main/default/objects/SlaAdministration__c/validationRules/ProstSales_Rule_04.validationRule-meta.xml
<ValidationRule>
    <fullName>ProstSales_Rule_04</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;04&apos;),
OR(ISPICKVAL(CaseField__c,&apos;&apos;),
ISPICKVAL(EndCasePhase__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Per questo tipo di regola devono essere compilati i campi &quot;Campo Case&quot; e &quot;Fine Fase Case&quot;</errorMessage>
</ValidationRule>