force-app/main/default/objects/SlaAdministration__c/validationRules/Sales_Rule_06.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Rule_06</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;06&apos;),
OR(ISPICKVAL(StartOrderPhase__c,&apos;&apos;),
ISPICKVAL(EndOrderPhase__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Per questo tipo di regola devono essere compilati i campi Inizio e Fine Fase dell&apos;Ordine</errorMessage>
</ValidationRule>