force-app/main/default/objects/SlaAdministration__c/validationRules/Sales_Rule_09.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Rule_09</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;09&apos;),
OR(ISPICKVAL(OrderField__c,&apos;&apos;),
ISPICKVAL(EndOrderPhase__c,&apos;&apos;))
)</errorConditionFormula>
    <errorMessage>Per questo tipo di regola devono essere compilati i campi &quot;Campo Ordine&quot; e &quot;Fine Fase Ordine&quot;</errorMessage>
</ValidationRule>