force-app/main/default/objects/SlaAdministration__c/validationRules/Sla_Range_Not_Equal_To_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Sla_Range_Not_Equal_To_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Range__c  = 0</errorConditionFormula>
    <errorDisplayField>Range__c</errorDisplayField>
    <errorMessage>Non puoi inserire un intervallo SLA uguale a zero</errorMessage>
</ValidationRule>