force-app/main/default/objects/SlaAdministration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <!--<columns>IsActive__c</columns>-->
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>