force-app/main/default/objects/SlaAdministration__c/listViews/PostSales.listView-meta.xml
<ListView>
    <fullName>PostSales</fullName>
    <columns>NAME</columns>
    <!--<columns>IsActive__c</columns>-->
    <columns>Type__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Range__c</columns>
    <columns>RangeType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SlaAdministration__c.HDT_RT_PostSales</value>
    </filters>
    <label>Post Sales</label>
</ListView>